; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_netcp_core.c_netcp_rx_notify.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ti/extr_netcp_core.c_netcp_rx_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.netcp_intf = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*)* @netcp_rx_notify to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @netcp_rx_notify(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.netcp_intf*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.netcp_intf*
  store %struct.netcp_intf* %5, %struct.netcp_intf** %3, align 8
  %6 = load %struct.netcp_intf*, %struct.netcp_intf** %3, align 8
  %7 = getelementptr inbounds %struct.netcp_intf, %struct.netcp_intf* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @knav_queue_disable_notify(i32 %8)
  %10 = load %struct.netcp_intf*, %struct.netcp_intf** %3, align 8
  %11 = getelementptr inbounds %struct.netcp_intf, %struct.netcp_intf* %10, i32 0, i32 0
  %12 = call i32 @napi_schedule(i32* %11)
  ret void
}

declare dso_local i32 @knav_queue_disable_notify(i32) #1

declare dso_local i32 @napi_schedule(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
